# cpp-project-template

./: CMakeLists.txt  README.md  test1.cpp
src/: main.cpp
